--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,7 @@ h2{
 h3{
     font-size: 1.8rem;
 }
+
+body {
+    overflow-x: hidden;
+}
